--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -2,6 +2,10 @@ html {
   overflow: hidden;
 }
 
+html, body, main, #app, .v-application, .v-application__wrap {
+  height: 100%;
+}
+
 .height-100 {
   height: 100vh;
 }
